Attempt to reduce memory requirement